adding spell interface

--- a/src/app/raw-edit/raw-edit.component.html
+++ b/src/app/raw-edit/raw-edit.component.html
@@ -9,6 +9,18 @@
 <div class="changelog container">
   <h1>Change Log</h1>
   <dl>
+    <dt><strong>Version 1.300</strong> - 02/16/2026</dt>
+    <dd>Added character generator with random ability rolling, name generation, and physical attributes</dd>
+    <dd>Added equipment library with searchable autocomplete for items and containers</dd>
+    <dd>Added equipment loadout presets for new characters</dd>
+    <dd>Added searchable spell list for Magic User and Cleric spells</dd>
+    <dd>Added hireling generation from the hirelings view</dd>
+    <dd>Upgraded from Angular 18 to Angular 19</dd>
+    <dd>Upgraded RxJS from 6 to 7, TypeScript to 5.8</dd>
+    <dd>Migrated all components to standalone (removed NgModules)</dd>
+    <dd>Migrated templates to modern control flow (&#64;if/&#64;for)</dd>
+    <dd>Replaced tslint with ESLint</dd>
+    <dd>Removed deprecated dependencies (Protractor, Karma, tslint, codelyzer)</dd>
     <dt><strong>Version 1.201</strong> - 01/07/2025</dt>
     <dd>Updated name to Primeval Arcana</dd>
     <dt><strong>Version 1.200</strong> - 09/08/2024</dt>
