--- a/src/app/links/links.component.sass
+++ b/src/app/links/links.component.sass
@@ -7,9 +7,9 @@ ul
     padding: 32px
     a
       text-decoration: none
-      color: rgba(0,0,0,.87)
+      color: var(--text)
       &.active
-        color: red
+        color: var(--primary)
 @media screen and (max-width: 1024px)
   ul
     li
