--- a/src/app/show-character/character-experience/character-experience.component.sass
+++ b/src/app/show-character/character-experience/character-experience.component.sass
@@ -2,7 +2,7 @@ h2
   a
     text-transform: uppercase
     font-family: Cinzel
-    color: rgba(0,0,0,.87)
+    color: var(--primary)
     padding-right: 25px
   button
     vertical-align: middle
