--- a/src/app/show-character/character-inventory/character-inventory.component.sass
+++ b/src/app/show-character/character-inventory/character-inventory.component.sass
@@ -9,7 +9,7 @@ mat-list-item
   right: 12px
   bottom: 4px
 button.edit-item-button mat-icon
-  color: white
+  color: var(--text)
 
 .overfull
   text-decoration: line-through
