--- a/src/app/show-character/character-overview/character-overview.component.sass
+++ b/src/app/show-character/character-overview/character-overview.component.sass
@@ -42,7 +42,7 @@
       font-size: 28px
       padding: 12px
       &.damage-modifier
-        color: #f44336
+        color: var(--warn)
         font-size: 18px
         margin-top: 20px
         text-align: center
