--- a/src/app/show-character/character-spell-book/character-spell-book.component.sass
+++ b/src/app/show-character/character-spell-book/character-spell-book.component.sass
@@ -16,7 +16,7 @@ mat-card
   justify-content: flex-end
   button
     margin: 2px
-    color: white
+    color: var(--text)
 
 .spell-info-icon
   position: absolute
