--- a/src/app/show-character/item-list/item/item.component.sass
+++ b/src/app/show-character/item-list/item/item.component.sass
@@ -4,7 +4,7 @@
   bottom: 4px
   text-align: right
 button.edit-item-button mat-icon
-  color: white
+  color: var(--text)
 
 .empty
   text-decoration: line-through
