--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -7,7 +7,7 @@ mat-toolbar
     right: 4px
   a
     text-decoration: none
-    color: rgba(0,0,0,.87)
+    color: var(--primary)
 #github-logo
   position: absolute
   right: 16px
@@ -49,7 +49,9 @@ mat-sidenav-container
   left: 0
   right: 0
   z-index: 100
-  background-color: white
+  background-color: var(--surface)
+  color: var(--primary)
+  border-bottom: 1px solid var(--border)
   font-size: 14pt
   font-family: Cinzel
   padding: 4px
@@ -63,13 +65,19 @@ mat-sidenav-container
   left: 0
   right: 0
   z-index: 100
-  background-color: white
+  background-color: var(--surface)
+  color: var(--primary)
+  border-top: 1px solid var(--border)
   font-size: 14pt
   font-family: Cinzel
   padding: 4px
 
 #footer
   margin-bottom: 25px
+  background: var(--surface) !important
+  border-top: 1px solid var(--border)
+  a
+    color: var(--primary)
 
 
 @media screen and (max-width: 1366px)
@@ -84,5 +92,4 @@ mat-sidenav-container
       display: block
     ul, li, a, button
       display: none
-
 
