--- a/src/app/raw-edit/raw-edit.component.sass
+++ b/src/app/raw-edit/raw-edit.component.sass
@@ -10,6 +10,8 @@ textarea
   border-radius: 4px
   padding: 8px
   font-family: monospace
+.toggle-row
+  margin-top: 12px
 .changelog
   text-align: center
 dl
