--- a/src/app/show-character/character-attributes/character-attributes.component.sass
+++ b/src/app/show-character/character-attributes/character-attributes.component.sass
@@ -1,3 +1,20 @@
+// Legacy 6-card layout
+#abilities
+  justify-content: space-evenly
+  > .prime
+    border: 3px solid var(--primary)
+  > .prime-text
+    color: var(--primary)
+  > mat-card
+    width: 15%
+    .ability-info-icon
+      position: absolute
+      top: 4px
+      right: 4px
+    mat-card-content
+      text-align: center
+
+// New compact grid layout
 .abilities-card
   width: 85%
   margin: 0 auto
@@ -57,10 +74,22 @@ mat-expansion-panel
     div
       width: 45%
 
+@media screen and (max-width: 1600px)
+  #abilities
+    > mat-card
+      width: 20%
+      margin-bottom: 24px
+
 @media screen and (max-width: 1200px)
   mat-expansion-panel
     width: 100%
     margin-bottom: 24px
+
+@media screen and (max-width: 1024px)
+  #abilities
+    > mat-card
+      width: 33%
+      margin-bottom: 24px
 
 @media screen and (max-width: 820px)
   .abilities-grid
